--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.1.3",
-    "style-components": "^0.1.0",
+    "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.12"
   }
 }
